# sensirion-i2c-rs

./: CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: check-and-build.yml
src/: crc.rs  crc8.rs  i2c.rs  i2c_async.rs  i2c_buffer.rs  lib.rs
