[package]
name = "sensirion-i2c"
version = "0.1.0"
authors = ["Raphael Nestler <raphael.nestler@sensirion.com>"]
description = "Common functionality for I2C based sensors from Sensirion"
readme = "README.md"
keywords = ["I2C", "Sensirion"]
categories = ["no-std", "hardware-support", "embedded"]
license = "BSD-3-Clause"
repository = "https://github.com/Sensirion/sensirion-i2c-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
