[package]
name = "sensirion-i2c"
version = "0.3.0"
authors = ["Raphael Nestler <raphael.nestler@sensirion.com>"]
documentation = "https://docs.rs/sensirion-i2c"
description = "Common functionality for I2C based sensors from Sensirion"
readme = "README.md"
keywords = ["I2C", "Sensirion"]
categories = ["no-std", "hardware-support", "embedded"]
license = "BSD-3-Clause"
repository = "https://github.com/Sensirion/sensirion-i2c-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.10", features = ["eh1"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
